tests/models/enum/unnamed/i8/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        i8
    ),
}
fn main() {}
